fix: Modal responsive with overflow

--- a/src/components/Modal/Modal.modules.sass
+++ b/src/components/Modal/Modal.modules.sass
@@ -177,6 +177,7 @@
     .modal
         &__wrapper
             min-width: unset
+            max-height: 80vh
             width: calc(100% - 60px)
             overflow-y: auto
             overflow-x: hidden
